Improve PolyMC compatibility, improve resource pack generation, finish armor texture support